# matrix-inline

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  LICENSE  PROMPT.md  README.md  docker-compose.build.yml  docker-compose.yml  docker-run.sh  go.mod  go.sum  rust-toolchain.toml
.github/workflows/: ci.yml  docker.yml
cmd/matrix-inline/: main.go
crates/adapter/: Cargo.toml
crates/adapter/src/: event_store.rs  http.rs  lib.rs  protocol.rs
deploy/systemd/: README.md  matrix-inline-adapter.service  matrix-inline.service
docs/: agent-update-v0.2.0.md  agent-update-v0.2.1.md  agent-update-v0.2.2.md  beta-deployment.md  deployment.md  local-e2e.md  operations.md  smoke-test.md
pkg/connector/: avatar.go  avatar_test.go  client.go  client_test.go  commands.go  commands_test.go  connector.go  connector_test.go  login.go  login_test.go
pkg/sidecar/: client.go  client_test.go  types.go
scripts/: check.sh  e2e-local.sh  smoke-local.sh
scripts/e2econfig/: main.go  main_test.go
scripts/e2efixture/: main.go
